# workflow-examples

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: custom-tools.mdx  message-blocks.mdx  messages.mdx  models.mdx  overview.mdx  workflow-patterns.mdx
input_files/: investigation_results.py
message_blocks/: blocks.py
models/: messages.py  models.py
workflows/: custom_tools.py  incident_response.py  workflows.py
