[project]
name = "workflow-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubiya-workflow-sdk[all]",
    "upstash-vector>=0.8.0",
]

[tool.uv.sources]
kubiya-workflow-sdk = { path = "../workflow_sdk/dist/kubiya_workflow_sdk-0.1.1-py3-none-any.whl" }
